Fix always recording the screen at (0,0) with screen recording

On wayland, you can't get the cursor position from QCursor::pos(), so we
use selected window geometry instead. However, using selected window
geometry can sometimes select the wrong screen if the window is between
screens. We'll need to come up with a better solution someday.

BUG: 480599
(cherry picked from commit e238cceb0bd65f88236d2ebf4202b9979bd79ce2)